# rust

./: .gitignore  Cargo.toml  Taskfile.yml  all_runs.html  flow.toml  index.html  readme.md  suite.log.latest.html
.claude/: agents.md
cli/ax/: Cargo.toml
cli/ax/docs/: how-ax-works-and-how-to-use-it-with-computer-use.md
cli/ax/src/: actions.rs  collector.rs  element.rs  main.rs  tree.rs
cli/checkpoint/: Cargo.toml
cli/checkpoint/src/: main.rs
cli/claude/: Cargo.toml
cli/claude/src/: main.rs
cli/cmd/: Cargo.toml
cli/cmd/src/: main.rs
cli/code/: Cargo.toml
cli/code/src/: main.rs
cli/ctx/: Cargo.toml
cli/ctx/docs/: how-ctx-cli-works-and-how-to-use-it-effectively-to-get-context.md
cli/ctx/src/: main.rs
cli/flow/src/: main.rs
cli/index/: Cargo.toml
cli/index/src/: main.rs
cli/intent/: Cargo.toml
cli/intent/src/: main.rs
cli/karabiner/: Cargo.toml
cli/karabiner/src/: main.rs
cli/km/: Cargo.toml
cli/km/docs/: how-km-cli-works.md
cli/km/scripts/: sync-zed-bindings.sh
cli/km/src/: main.rs
cli/mac/: Cargo.toml
cli/mac/src/: main.rs
cli/macos/: Cargo.toml
cli/macos/src/: main.rs
cli/move/: Cargo.toml
cli/move/src/: main.rs
cli/new/: Cargo.toml
cli/new/src/: main.rs
cli/observe/: Cargo.toml  config.example.toml
cli/observe/src/: main.rs  remote.rs  watcher.rs
cli/personal-mcp/: Cargo.toml
cli/personal-mcp/src/: main.rs
cli/snaps/: Cargo.toml
cli/snaps/src/: main.rs
cli/sometime/: Cargo.toml
cli/sometime/src/: main.rs
cli/stream/: Cargo.toml  config.example.toml
cli/stream/docs/: zero-impact-streaming.md
cli/stream/src/: config.rs  local.rs  main.rs  session.rs  util.rs
cli/sync/: Cargo.toml
cli/sync/src/: main.rs
cli/t/: Cargo.toml
cli/t/src/: main.rs
cli/trail/: Cargo.toml
cli/trail/src/: main.rs
cli/trash/: Cargo.toml
cli/trash/src/: main.rs
cli/try/: Cargo.toml  readme.md
cli/try/src/: main.rs
cli/unite/: Cargo.toml
cli/unite/src/: main.rs
cli/updates/: Cargo.toml
cli/updates/src/: main.rs
cli/uptodate/: Cargo.toml
cli/uptodate/src/: main.rs
ct_run.ct@Nikitas-MacBook-Pro.2025-12-25_03.43.58/: ctlog.html  index.html  last_test.html  misc_io.log.html  totals.info
ct_run.ct@Nikitas-MacBook-Pro.2025-12-25_03.43.58/lang.rust.logs/: last_link.html  last_name
ct_run.ct@Nikitas-MacBook-Pro.2025-12-25_03.43.58/lang.rust.logs/run.2025-12-25_03.43.58/: suite.log.html  suite.summary  unexpected_io.log.html
docs/: outdated-readme.md
lib/lin-rs/: Cargo.toml
lib/lin-rs/src/: lib.rs
lib/lin-rs/tests/: outlines_core.rs
lib/linsa/: Cargo.toml
lib/linsa/src/: lib.rs
scripts/: cleanup.py
server/stream/: Cargo.toml  stream-server.service
server/stream/src/: main.rs  receiver.rs  s3.rs  watcher.rs
