[workspace]
members = [
    "cli/flow",
    "cli/index",
    "cli/stream",
    "cli/code",
    "cli/try",
    "cli/claude",
    "cli/macos",
    "cli/km",
    "cli/karabiner",
    "cli/new",
    "cli/ctx",
    "cli/personal-mcp",
    "cli/ax",
    "cli/intent",
    "lib/linsa",
    "server/stream",
    # "lib/lin-rs",  # requires local outlines-core fork
]
resolver = "2"
