[workspace]
members = [
    "cli/flow",
    "cli/index",
    "cli/observe",
    "cli/code",
    "cli/try",
    "cli/claude",
    "cli/mac",
    "cli/km",
    "cli/karabiner",
    "cli/new",
    "cli/ctx",
    "cli/personal-mcp",
    "cli/ax",
    "cli/intent",
    "cli/move",
    "cli/snaps",
    "cli/sync",
    "cli/unite",
    "cli/checkpoint",
    "cli/uptodate",
    "cli/cmd",
    "cli/t",
    "lib/linsa",
    # "server/stream",  # removed
    # "lib/lin-rs",  # requires local outlines-core fork
]
resolver = "2"
