[package]
name = "claude-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-rs"
path = "src/main.rs"

[dependencies]
claude-code-sdk = { path = "/Users/nikiv/fork-i/epsilla-cloud/claude-code-sdk-rust" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
