[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "6"
anyhow = "1"
nucleo-matcher = "0.3"
crossterm = "0.28"
ratatui = "0.29"
ureq = { version = "2", features = ["json"] }
