[package]
name = "move"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "move"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
claude-code-sdk = { path = "/Users/nikiv/fork-i/epsilla-cloud/claude-code-sdk-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
walkdir = "2.5"
