[package]
name = "observe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "5.0"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
