[package]
name = "personal-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { path = "/Users/nikiv/fork-i/modelcontextprotocol/rust-sdk/crates/rmcp", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.0"
